--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,25 +1,1 @@
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
-set -g base-index 1
-setw -g pane-base-index 1
-bind-key '"' split-window -c "#{pane_current_path}" \; select-layout -n \; select-layout -p
-set-hook -g after-kill-pane 'select-layout -n; select-layout -p'
-set-hook -g pane-exited 'select-layout -n; select-layout -p'
-set -g mouse
-set -g @continuum-restore 'on'
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
-
-run '~/.tmux/plugins/tpm/tpm'
+.tmux/.tmux.conf
